force-app/main/default/objects/Litmos__Courses_on_Cases__c/Litmos__Courses_on_Cases__c.object-meta.xml
<CustomObject>
    <label>Courses on Cases</label>
    <nameField>
        <label>Courses on Cases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses on Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>