force-app/main/default/objects/Litmos__Courses_on_Cases__c/fields/Litmos__Case__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Courses on Cases</relationshipLabel>
    <relationshipName>Courses_on_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>